last commit: Xamarin erwähnt

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -1122,7 +1122,7 @@ Die Klasse SettingsViewModel enthält die Logik der SettingsPage. Sie erbt von I
 	\vspace{0.3cm}
 \end{minipage}
 
-	Dieses Enum spezifiziert alle möglichen Typen von Menüeinträgen der MenuPage. Entsprechend gibt es für jede vom Menü aus direkt navigierbare Page einen Wert dieses Enums. Wir orientieren uns hierbei an dem starndardmäßigen Entwurf für das Master-Detail Schema in der Entwicklungsumgebung Visual Studio 2019. \\
+	Dieses Enum spezifiziert alle möglichen Typen von Menüeinträgen der MenuPage. Entsprechend gibt es für jede vom Menü aus direkt navigierbare Page einen Wert dieses Enums. Wir orientieren uns hierbei an dem starndardmäßigen Entwurf für das Master-Detail Schema von Xamarin in der Entwicklungsumgebung Visual Studio 2019. \\
 	\paragraph{Werte:}
 	\begin{itemize}
         \item CountMode,
