--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -9,6 +9,7 @@
 \usepackage{lmodern}
 \usepackage{titlesec}
 \usepackage{longtable}
+\usepackage{pdfpages}
 % Notwendig für Links im Text
 \usepackage{hyperref}
 %%\usepackage{svg}
@@ -1714,13 +1715,14 @@ Static Class Constants & 9\\
 Static Class IMUDataExtractor & 12\\
 \hline
 \end{longtable}
-
+\clearpage
 \section{Anhang}
-\begin{center}
-\includegraphics[width=1.4\textwidth, angle=-90]{./bilder/Anhang/View.png}\\
-\includegraphics[width=1.5\textwidth, angle=-90]{./bilder/Anhang/ViewModel.png}\\
-\includegraphics[width=1.5\textwidth, angle=-90]{./bilder/Anhang/Model.png}\\
-\end{center}
+\includepdf[fitpaper=true]{Diagramme/uebersicht/png2pdf.pdf}
+%%\begin{center}
+%%\includegraphics[width=1.4\textwidth, angle=-90]{./bilder/Anhang/View.png}\\
+%%\includegraphics[width=1.47\textwidth, angle=-90]{./bilder/Anhang/ViewModel.png}\\
+%%\includegraphics[width=1.47\textwidth, angle=-90]{./bilder/Anhang/Model.png}\\
+%%\end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% END CONTENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
